api/infra/k8s/api-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: evebook-api
  annotations:
    ingress.appscode.com/affinity: 'cookie'
spec:
  ports:
  - targetPort: 8080
    port: 80
    protocol: TCP
  selector:
    app: evebook-api
