api/infra/k8s/esi-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: evebook-esi-cache
spec:
  ports:
  - targetPort: 80
    port: 80
    protocol: TCP
  selector:
    app: evebook-esi-cache
